[package]
name = "aziot-cloud-client-async"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2024"
publish = false


[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hyper = { workspace = true }
hyper-openssl = { workspace = true }
hyper-util = { workspace = true }
log = { workspace = true }
percent-encoding = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

aziot-identity-common = { path = "../aziot-identity-common" }
aziot-key-client-async = { path = "../../key/aziot-key-client-async" }
aziot-key-common = { path = "../../key/aziot-key-common" }
aziot-tpm-client-async = { path = "../../tpm/aziot-tpm-client-async" }
aziot-tpm-common = { path = "../../tpm/aziot-tpm-common" }
http-common = { path = "../../http-common" }


[lints]
workspace = true
