[package]
name = "aziot-dps-client-async"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"
publish = false

[dependencies]
async-recursion = "0.3.1"
bytes = "0.5.6"
base64 = "0.12"
chrono = "0.4"
http = "0.2"
hyper = { version = "0.14", features = ["stream"] }
hyper-openssl = "0.9"
log = "0.4"
openssl = "0.10"
percent-encoding = "2"
tokio = { version = "1.0", features = ["macros"] }
serde = "1"
serde_json = "1"
futures-util = "0.3"
url = "2"

aziot-cert-client-async = { path = "../../cert/aziot-cert-client-async" }
aziot-cloud-client-async-common = { path = "../aziot-cloud-client-async-common" }
aziot-key-client-async = { path = "../../key/aziot-key-client-async" }
aziot-key-common = { path = "../../key/aziot-key-common" }
aziot-tpm-client-async = { path = "../../tpm/aziot-tpm-client-async" }
aziot-tpm-common = { path = "../../tpm/aziot-tpm-common" }
http-common = { path = "../../http-common" }
openssl2 = { path = "../../openssl2" }
