[package]
name = "aziot-dps-client-async"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"
publish = false

[dependencies]
async-recursion = "0.3.1"
bytes = "1"
base64 = "0.13"
chrono = "0.4"
futures-util = "0.3"
http = "0.2"
hyper = "0.14"
log = "0.4"
openssl = "0.10"
percent-encoding = "2"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["time"] }
url = "2"

aziot-cert-client-async = { path = "../../cert/aziot-cert-client-async" }
aziot-cloud-client-async-common = { path = "../aziot-cloud-client-async-common" }
aziot-key-client-async = { path = "../../key/aziot-key-client-async" }
aziot-key-common = { path = "../../key/aziot-key-common" }
aziot-tpm-client-async = { path = "../../tpm/aziot-tpm-client-async" }
aziot-tpm-common = { path = "../../tpm/aziot-tpm-common" }
http-common = { path = "../../http-common" }
openssl2 = { path = "../../openssl2" }
