[package]
name = "aziot-hub-client-async"
version = "0.1.0"
authors = ["Rajeev Massand <massand@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
base64 = "0.12"
chrono = "0.4"
futures-util = "0.3"
http = "0.2"
hyper = { version = "0.13", features = ["stream"] }
hyper-openssl = "0.8"
log = "0.4"
openssl = "0.10"
percent-encoding = "2"
tokio = { version = "0.2", features = ["dns", "macros"] }
serde = "1"
serde_json = "1"
url = "2"

aziot-cert-common-http = { path = "../../cert/aziot-cert-common-http" }
aziot-cert-client-async = { path = "../../cert/aziot-cert-client-async" }
aziot-identity-common = { path = "../aziot-identity-common" }
aziot-key-client = { path = "../../key/aziot-key-client" }
aziot-key-client-async = { path = "../../key/aziot-key-client-async" }
aziot-key-common = { path = "../../key/aziot-key-common" }
aziot-key-openssl-engine = { path = "../../key/aziot-key-openssl-engine" }
http-common = { path = "../../http-common" }
openssl2 = { path = "../../openssl2" }
