[package]
name = "aziot-identity-client-async"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"

[dependencies]
http = "0.2"
hyper = "0.14"
log = "0.4"
percent-encoding = "2"
serde = "1"

aziot-cert-common-http = { path = "../../cert/aziot-cert-common-http" }
aziot-identity-common = { path = "../aziot-identity-common" }
aziot-identity-common-http = { path = "../aziot-identity-common-http" }
http-common = { path = "../../http-common", features = ["tokio1"] }
