[package]
name = "aziot-identity-common-http"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

aziot-identity-common = { path = "../aziot-identity-common" }
aziot-key-common = { path = "../../key/aziot-key-common" }
aziot-key-common-http = { path = "../../key/aziot-key-common-http" }
http-common = { path = "../../http-common" }
