[package]
name = "aziot-identity-common-http"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2024"


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

aziot-cert-common-http = { path = "../../cert/aziot-cert-common-http" }
aziot-identity-common = { path = "../aziot-identity-common" }


[lints]
workspace = true
