[package]
name = "aziot-identity-common"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

aziot-key-common = { path = "../../key/aziot-key-common" }
