[package]
name = "aziot-identity-common"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
serde = { version = "1", features = ["derive"] }

aziot-key-common = { path = "../../key/aziot-key-common" }
http-common = { path = "../../http-common" }
