[package]
name = "aziot-identity-common"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2024"


[dependencies]
openssl = { workspace = true }
serde = { workspace = true }

aziot-key-common = { path = "../../key/aziot-key-common" }
http-common = { path = "../../http-common" }


[lints]
workspace = true
