[package]
name = "aziot-identityd-config"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
description = """
The code used for Identity Service.
"""
edition = "2021"


[dependencies]
http-common = { path = "../../http-common" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
url = { version = "2", features = ["serde"] }

aziot-identity-common = { path = "../aziot-identity-common" }
cert-renewal = { path = "../../cert/cert-renewal"}

[dev-dependencies]
toml = "0.5"
