[package]
name = "aziot-identityd-config"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
description = """
The code used for Identity Service.
"""
edition = "2021"


[dependencies]
libc = "0.2"
openssl = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }

aziot-identity-common = { path = "../aziot-identity-common" }
cert-renewal = { path = "../../cert/cert-renewal"}
http-common = { path = "../../http-common" }

[dev-dependencies]
toml = "0.7"
