[package]
name = "aziot-identityd-config"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
description = """
The code used for Identity Service.
"""
edition = "2024"


[dependencies]
libc = { workspace = true }
openssl = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

aziot-identity-common = { path = "../aziot-identity-common" }
cert-renewal = { path = "../../cert/cert-renewal"}
http-common = { path = "../../http-common" }


[dev-dependencies]
toml = { workspace = true }


[lints]
workspace = true
